--- a/about.html
+++ b/about.html
@@ -51,7 +51,11 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="home.html">
           <div class="logo-placeholder">
-            <i class="bi bi-droplet-fill"></i>
+            <img
+              src="images/WhatsApp Image 2025-09-15 at 23.36.00_upscayl_5x_upscayl-standard-4x(1).png"
+              alt="Indur Septic Cleaning Logo"
+              class="logo"
+            />
           </div>
           Indur Septic Cleaning
         </a>
@@ -128,7 +132,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 fade-in-left">
             <img
-              src="images/Whisk_c577baf7e1224c8b3d54bfb5df5a3dcddr(1).jpeg"
+              src="/images/Whisk_c577baf7e1224c8b3d54bfb5df5a3dcddr(1).jpeg"
               alt="Indur Septic Tank Cleaning team working professionally in Nizamabad"
               class="img-fluid rounded shadow"
             />
@@ -441,7 +445,7 @@
           </div>
           <div class="col-lg-6 fade-in-right">
             <img
-              src="images/Gemini_Generated_Image_i6tbp8i6tbp8i6tb.jpg"
+              src="/images/Gemini_Generated_Image_i6tbp8i6tbp8i6tb.jpg"
               alt="Nizamabad service area map showing septic tank cleaning coverage"
               class="img-fluid rounded shadow"
             />
