--- a/home.html
+++ b/home.html
@@ -51,7 +51,11 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="home.html">
           <div class="logo-placeholder">
-            <i class="bi bi-droplet-fill"></i>
+            <img
+              src="images/WhatsApp Image 2025-09-15 at 23.36.00_upscayl_5x_upscayl-standard-4x(1).png"
+              alt="Indur Septic Cleaning Logo"
+              class="logo"
+            />
           </div>
           Indur Septic Cleaning
         </a>
@@ -169,7 +173,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="images/Gemini_Generated_Image_9mnxwz9mnxwz9mnx.png"
+                src="/images/Gemini_Generated_Image_9mnxwz9mnxwz9mnx.png"
                 class="d-block w-100"
                 alt="Professional septic tank cleaning process in Nizamabad"
               />
@@ -180,7 +184,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="images/Whisk_5ff8e3ce0c94ef8b4024f47192e90536dr(1).jpeg"
+                src="/images/Whisk_5ff8e3ce0c94ef8b4024f47192e90536dr(1).jpeg"
                 class="d-block w-100"
                 alt="Modern septic tank pumping equipment used in Nizamabad"
               />
@@ -191,7 +195,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="images/Whisk_8c48e1b01db8861ab444b5a25a3d4250dr(2).jpeg"
+                src="/images/Whisk_8c48e1b01db8861ab444b5a25a3d4250dr(2).jpeg"
                 class="d-block w-100"
                 alt="Eco-friendly septic tank cleaning methods in Nizamabad"
               />
@@ -202,7 +206,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="images/Whisk_9a49ccd09211e5289f644564d11be88ddr.jpeg"
+                src="/images/Whisk_9a49ccd09211e5289f644564d11be88ddr.jpeg"
                 class="d-block w-100"
                 alt="Expert septic tank maintenance team in Nizamabad"
               />
@@ -213,7 +217,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="images/Whisk_7746796bce4b313819049c0043b8d293dr(1).jpeg"
+                src="/images/Whisk_7746796bce4b313819049c0043b8d293dr(1).jpeg"
                 class="d-block w-100"
                 alt="Complete septic system maintenance services in Nizamabad"
               />
@@ -316,7 +320,7 @@
           </div>
           <div class="col-lg-6 fade-in-right">
             <img
-              src="images/Whisk_e4b0e5595de8e39828e4abd1678cf232dr(1).jpeg"
+              src="/images/Whisk_e4b0e5595de8e39828e4abd1678cf232dr(1).jpeg"
               alt="Professional septic tank cleaning team in Nizamabad"
               class="img-fluid rounded shadow"
             />
