--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="home.html">
           <div class="logo-placeholder">
-            <i class="bi bi-droplet-fill"></i>
+            <img
+              src="images/WhatsApp Image 2025-09-15 at 23.36.00_upscayl_5x_upscayl-standard-4x(1).png"
+              alt="Indur Septic Cleaning Logo"
+              class="logo"
+            />
           </div>
           Indur Septic Cleaning
         </a>
