--- a/home.html
+++ b/home.html
@@ -173,7 +173,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="/images/Gemini_Generated_Image_9mnxwz9mnxwz9mnx.png"
+                src="/images/Whisk_imz1kjzwmtykvwnx0snkvtytmtoyqtlzujmi1im(1).jpeg"
                 class="d-block w-100"
                 alt="Professional septic tank cleaning process in Nizamabad"
               />
