--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-17416607080"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17416607080');
+    </script>
   </head>
   <body>
     <!-- Header/Navbar -->
