--- a/home.html
+++ b/home.html
@@ -56,6 +56,8 @@
 
       gtag('config', 'AW-17416607080');
     </script>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Header/Navbar -->
