--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </script>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.png" type="image/png" sizes="48x48" />
   </head>
   <body>
     <!-- Header/Navbar -->
