--- a/services.html
+++ b/services.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.png" type="image/png" sizes="48x48" />
   </head>
   <body>
     <!-- Header/Navbar -->
