--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
     </script>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Indur Septic Tank Cleaning Nizamabad",
+        "url": "https://www.indurseptictankcleaningnizamabad.com",
+        "logo": "https://www.indurseptictankcleaningnizamabad.com/images/android-chrome-192x192.png"
+      }
+    </script>
   </head>
   <body>
     <!-- Header/Navbar -->
