--- a/services.html
+++ b/services.html
@@ -44,8 +44,8 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Header/Navbar -->
